--- a/css/advancedOptionsDialog.css
+++ b/css/advancedOptionsDialog.css
@@ -124,7 +124,7 @@
   margin: 6px;
   
   min-width: 150px;
-  max-width: 300px;
+  max-width: 250px;
   font-size: 1.3em;
   height: min-content;
 }
@@ -152,6 +152,51 @@
 #aFilter_search:hover {
   background: linear-gradient(to right, #2cd5ff, #4a77ff);
   font-weight: bolder;
+}
+
+#aFilter_include_search_outside_filters_box_container {
+  font-size: 0.8rem;
+  line-height: 1.1;
+  display: grid;
+  grid-template-columns: 1em auto;
+  gap: 0.5em;
+  margin-top: 0.5em;
+  margin-bottom: 0.5em;
+}
+
+#aFilter_include_search_outside_filters_box_container label {
+  font-size: 1.1rem;
+  line-height: 1.1;
+}
+/* checkbox */
+#aFilter_include_search_outside_filters_box {
+  appearance: none;
+  background-color: #464d58;
+  margin: 0;
+  font: inherit;
+  color: currentColor;
+  width: 1.15em;
+  height: 1.15em;
+  border: 0.0em solid currentColor;
+  border-radius: 0.15em;
+  transform: translateY(-0.075em);
+  
+  display: grid;
+  place-content: center;
+  cursor: pointer;
+}
+
+#aFilter_include_search_outside_filters_box::before {
+  content: "";
+  width: 1.15em;
+  height: 1.15em;
+  border-radius: 0.15em;
+  transform: scale(0);
+  transition: 80ms transform ease-in-out;
+  box-shadow: inset 1.2em 1.2em #00c0f0;
+}
+#aFilter_include_search_outside_filters_box:checked::before {
+  transform: scale(1);
 }
 
 
