added include search outside filters

--- a/components/filterWindow.html
+++ b/components/filterWindow.html
@@ -319,6 +319,10 @@
                 </div>
               </div>
             </div>
+            <div id="aFilter_include_search_outside_filters_box_container" class="aFilter_collection">
+              <input type="checkbox" name="" id="aFilter_include_search_outside_filters_box">
+              <label id="modal-includeCheckbox-simpleSearch" for="">Include search outside filters</label>
+            </div>
             <div id="aFilter_search" class="aFilter_collection">Search</div>
           </div>
         </div>
