--- a/components/filterWindow.html
+++ b/components/filterWindow.html
@@ -420,7 +420,7 @@
                     </p>
                   </div>
                 </div>
-                <div id="aFilter_handler_search" class="aFilter_collection">Add</div>
+                <div id="aFilter_handler_add" class="hFilter_button aFilter_collection">Add</div>
               </div>
               <div>
                 <div class="aFilter_storage aFilter_collection">
@@ -431,6 +431,10 @@
                         <li data-overrule-tag="everything">Show All2</li>
                       </ul>
                   </div>
+                </div>
+                <div class="buttons">
+                  <div id="aFilter_handler_edit" class="hFilter_button aFilter_collection">Edit</div>
+                  <div id="aFilter_handler_remove" class="hFilter_button aFilter_collection">Remove</div>
                 </div>
               </div>
             </div>
