added add functionallity on filter handler + other
* add functionallity
* adjusted reset button for filter handler

--- a/components/filterWindow.html
+++ b/components/filterWindow.html
@@ -353,6 +353,10 @@
         <div class="ah_filter_window" id="handler_filter_window">
           <div class="aFilter_boxes_container"><div class="aFilter_boxes">
             <div class="aFilter_container">
+              <h4 id="aFilter_handler_html_title-label">Label</h4>
+              <input class="steam_filter_gui_input" type="search" id="aFilter_handler-label">
+            </div>
+            <div class="aFilter_container">
               <h4 id="aFilter_handler_html_title-search">Search</h4>
               <input class="steam_filter_gui_input" type="search" id="aFilter_handler-search">
             </div>
@@ -420,7 +424,7 @@
                     </p>
                   </div>
                 </div>
-                <div id="aFilter_handler_add" class="hFilter_button aFilter_collection">Add</div>
+                <div id="aFilter_handler_add" class="hFilter_button_unavailable hFilter_button aFilter_collection">Add</div>
               </div>
               <div>
                 <div class="aFilter_storage aFilter_collection">
