added css link for edit and remove buttons

--- a/components/filterWindow.html
+++ b/components/filterWindow.html
@@ -437,8 +437,8 @@
                   </div>
                 </div>
                 <div class="buttons">
-                  <div id="aFilter_handler_edit" class="hFilter_button aFilter_collection">Edit</div>
-                  <div id="aFilter_handler_remove" class="hFilter_button aFilter_collection">Remove</div>
+                  <div id="aFilter_handler_edit" class="hFilter_button_unavailable hFilter_button aFilter_collection">Edit</div>
+                  <div id="aFilter_handler_remove" class="hFilter_button_unavailable hFilter_button aFilter_collection">Remove</div>
                 </div>
               </div>
             </div>
