addded the user filters to filter options

--- a/components/filterWindow.html
+++ b/components/filterWindow.html
@@ -144,7 +144,7 @@
 
 <!-- Filter Options V2 -->
 <div hidden class="steam_filter_dialog_group" id="steam_filter_Options">
-  <div class="newmodal steam_inv_filter_modal" data-panel="{&quot;onCancelButton&quot;:&quot;CModal.DismissActiveModal()&quot;}">
+  <div id="steam_filter_options_big" class="newmodal steam_inv_filter_modal" data-panel="{&quot;onCancelButton&quot;:&quot;CModal.DismissActiveModal()&quot;}">
     <div class="modal_top_bar"></div>
     <div class="newmodal_header_border">
       <div class="newmodal_header">
@@ -221,6 +221,14 @@
                   <li id="modal-filterOptions-data-deletedItem"> Deleted Item </li>
                   <li id="modal-filterOptions-data-unsealedGraffiti"> Unsealed Graffiti </li>
                   <li id="modal-filterOptions-data-missionReward"> Mission Reward (Operations) </li>
+                </ul>
+              </div>
+            </div>
+            <div id="user_filter_storage" class="container">
+              <div class="list-3">
+                <h3 id="modal-filterOptions-userFilterTitle" class="list-Title">User Filters</h3>
+                <ul id="user_made_filters_storage_conatiner" class="list3 filter-List">
+                  <li class="user_made_filter"> test </li>
                 </ul>
               </div>
             </div>
