--- a/components/filterWindow.html
+++ b/components/filterWindow.html
@@ -346,7 +346,7 @@
 </div>
 
 <!-- Filter handler-->
-<div class="steam_filter_dialog_group" id="steam_filter_handler">
+<div hidden class="steam_filter_dialog_group" id="steam_filter_handler">
   <div class="steam_inv_filter_modal_handler newmodal steam_inv_filter_modal" data-panel="{&quot;onCancelButton&quot;:&quot;CModal.DismissActiveModal()&quot;}">
     <div class="modal_top_bar"></div>
     <div class="newmodal_header_border">
