progress on fixes

--- a/components/filterWindow.html
+++ b/components/filterWindow.html
@@ -171,9 +171,9 @@
                 <div id="steam_filter_searchbar_win_form" action=""> <!--form-->
                   <div class="searchbar_container">
                     <label id="modal-filterOptions-search-label" class="searchbar_form_object steam_filter_gui_label" for="searchbar">Search</label>
-                    <input class="searchbar_form_object steam_filter_gui_input" type="text" id="searchbar_data" name="searchbar_data">
-                    <label id="modal-filterOptions-search-altLabel" class="searchbar_form_object steam_filter_gui_label" for="label">Alt. Label</label>
-                    <input class="searchbar_form_object steam_filter_gui_input" type="text" id="label_data" name="label_data">
+                    <input class="searchbar_form_object steam_filter_gui_input" type="search" id="small_search_engine_search_data" name="searchbar_data">
+                    <label id="modal-filterOptions-search-altLabel" class="searchbar_form_object steam_filter_gui_label" for="label">Label</label>
+                    <input class="searchbar_form_object steam_filter_gui_input" type="search" id="small_search_engine_label_data" name="small_search_engine_label_data">
                     <div>
                       <input class="searchbar_form_object steam_filter_gui_button" type="submit" id="modal-filterOptions-add-button" name="add_search_filter" value="Add">
                       <input class="searchbar_form_object steam_filter_gui_button" type="submit" id="modal-filterOptions-search-button" name="add_search_filter" value="Search">
