added export data

--- a/components/filterWindow.html
+++ b/components/filterWindow.html
@@ -523,6 +523,7 @@
           </div>
         </div>
         <div class="newmodal_buttons" data-panel="{&quot;flow-children&quot;:&quot;row&quot;}">
+          <div id="steam_filter_stats_win_export" class="btn_grey_steamui btn_medium steam_filter_stats_win_export" data-panel="{&quot;autoFocus&quot;:true,&quot;focusable&quot;:true,&quot;clickOnActivate&quot;:true}"><span>EXPORT DATA</span></div>
           <div id="steam_filter_stats_win_btn" class="btn_grey_steamui btn_medium steam_filter_stats_win_dismiss" data-panel="{&quot;autoFocus&quot;:true,&quot;focusable&quot;:true,&quot;clickOnActivate&quot;:true}"><span id="steam_filter_stats_win_btn_txt">CLOSE</span></div>
         </div>
       </div>
