added export history data

--- a/components/filterWindow.html
+++ b/components/filterWindow.html
@@ -557,6 +557,11 @@
           <option value="english">English</option>
           <option value="swedish">Swedish</option>
         </select>
+        <br/>
+        <div class="newmodal_buttons">
+          <div id="steam_filter_options_Win_Export_History_Btn" class="btn_grey_steamui btn_medium"><span>EXPORT HISTORY</span></div>
+        </div>
+        
         <div class="newmodal_buttons" data-panel="{&quot;flow-children&quot;:&quot;row&quot;}">
           <div id="steam_filter_options_Win_Btn" class="btn_grey_steamui btn_medium" data-panel="{&quot;autoFocus&quot;:true,&quot;focusable&quot;:true,&quot;clickOnActivate&quot;:true}"><span id="steam_filter_options_Win_Btn_Txt">SAVE</span></div>
         </div>
