--- a/components/filterWindow.html
+++ b/components/filterWindow.html
@@ -559,6 +559,8 @@
         </select>
         <br/>
         <div class="newmodal_buttons">
+          <div id="steam_filter_options_Win_Import_History_Btn" class="btn_grey_steamui btn_medium"><span>IMPORT HISTORY</span></div>
+          <input type="file" id="steam_filter_options_Win_Import_History_File" hidden>
           <div id="steam_filter_options_Win_Export_History_Btn" class="btn_grey_steamui btn_medium"><span>EXPORT HISTORY</span></div>
         </div>
         
