made only .json files acceptable

--- a/components/filterWindow.html
+++ b/components/filterWindow.html
@@ -560,7 +560,7 @@
         <br/>
         <div class="newmodal_buttons">
           <div id="steam_filter_options_Win_Import_History_Btn" class="btn_grey_steamui btn_medium"><span>IMPORT HISTORY</span></div>
-          <input type="file" id="steam_filter_options_Win_Import_History_File" hidden>
+          <input type="file" id="steam_filter_options_Win_Import_History_File" accept=".json" hidden>
           <div id="steam_filter_options_Win_Export_History_Btn" class="btn_grey_steamui btn_medium"><span>EXPORT HISTORY</span></div>
         </div>
         
